--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "vite build",
     "preview": "vite preview",
     "predeploy": "vite build && cp dist/index.html dist/404.html",
-    "deploy": "gh-pages -d dist"
+    "deploy": "vite build && gh-pages -d dist -b gh-pages"
   },
   "dependencies": {
     "@react-spring/web": "^10.0.3",
