--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "@react-spring/web": "^10.0.3",
     "@react-three/drei": "^10.7.6",
     "@react-three/fiber": "^9.4.0",
-    "p5": "^2.0.5",
+    "next": "^16.0.8",
+    "p5": "^2.1.1",
     "pixi.js": "^8.14.3",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
+    "react": "^19.2.1",
+    "react-dom": "^19.2.1",
+    "react-ga4": "^2.1.0",
+    "react-p5-wrapper": "^4.1.2",
     "react-router-dom": "^7.9.3",
     "three": "^0.180.0"
   },
