--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "vite build",
     "preview": "vite preview",
     "predeploy": "npm run build",
-    "deploy": "cp dist/index.html dist/404.html && gh-pages -d dist"
+    "deploy": "cp dist/index.html dist/404.html && gh-pages -d dist --dotfiles"
   },
   "dependencies": {
     "@react-spring/web": "^10.0.3",
